# conf-t

./: .firebaserc  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  firebase.json  pyproject.toml
.github/workflows/: ci.yml  publish.yml
conf_t/: __init__.py  cli.py  engine.py  main.py  models.py  parser.py
conf_t/lessons/: cisco_acl_extended.json  cisco_acl_standard.json  cisco_basic.json  cisco_dhcp.json  cisco_etherchannels.json  cisco_hsrp.json  cisco_inter_vlan_routing.json  cisco_interface_basics.json  cisco_nat_pat.json  cisco_ospf_multiarea.json  cisco_ospf_single_area.json  cisco_port_security.json  cisco_qos.json  cisco_show_commands.json  cisco_ssh_hardening.json  cisco_static_routing.json  cisco_stp.json  cisco_troubleshooting_lab.json  cisco_trunking_dtp.json  cisco_vlan_fundamentals.json  cisco_wlan.json  docker_basic.json  docker_cleanup.json  docker_compose.json  docker_containers.json  docker_dockerfile.json  docker_images.json  docker_networking.json  docker_registry.json  docker_troubleshooting_lab.json  docker_volumes.json  git_basic.json  git_branching.json  git_merging.json  git_rebasing.json  git_recovery.json  git_remote.json  git_staging.json  git_stash.json  git_tags.json  (+28 more)
scripts/: export-engine-fixtures.py
tests/: test_engine.py  test_lessons.py  test_parser.py
web/: .env.local.example  README.md  package-lock.json  package.json  vitest.config.ts
web/scripts/: sync-lessons.mjs
web/src/: proxy.ts
web/src/app/: layout.tsx
web/src/app/(app)/: layout.tsx
web/src/app/(app)/dashboard/: page.tsx
web/src/app/(app)/dashboard/continue/: page.tsx
web/src/app/(app)/lessons/create/: page.tsx
web/src/app/(app)/onboarding/: page.tsx
web/src/app/(app)/practice/: page.tsx
web/src/app/(app)/practice/[lessonId]/: page.tsx
web/src/app/(app)/review/: page.tsx
web/src/app/(app)/review/all/: page.tsx
web/src/app/(app)/settings/reset/: page.tsx
web/src/app/(app)/stats/: page.tsx
web/src/app/(marketing)/: layout.tsx  page.tsx
web/src/app/login/: page.tsx
web/src/app/signup/: page.tsx
web/src/components/app/: AppShell.tsx  ComingSoonPanel.tsx  ProgressErrorNotifier.tsx
web/src/components/auth/: AuthShell.tsx
web/src/components/curriculum/: LessonBrowser.tsx
web/src/components/terminal/: PracticeTerminal.tsx
web/src/components/ui/: ErrorBoundary.tsx  ErrorPanel.tsx  Skeleton.tsx  Toast.tsx
web/src/hooks/: useAuth.ts  useProgress.ts
web/src/lib/: errors.ts
web/src/lib/auth/: constants.ts
web/src/lib/engine/: curriculum.ts  engine.parity.test.ts  index.ts  progress.ts  review.ts  time.ts  types.ts  validate.test.ts  validate.ts
web/src/lib/engine/fixtures/: engine-fixtures.json
web/src/lib/firebase/: auth.ts  config.ts  custom-lessons.ts  progress.ts
web/src/lib/lessons/: index.ts  loader.ts
(+1 files in other folders)
