[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "conf-t"
version = "0.4.0"
description = "Interactive web app and CLI trainer for Cisco, Linux, PowerShell, Git, and Docker commands. Primary experience: https://conf-t.vercel.app"
readme = "README.md"
authors = [
    { name = "Islam Elshayib", email = "30467832+Elshayib@users.noreply.github.com" }
]
license = { file = "LICENSE" }
keywords = ["cli", "training", "cisco", "linux", "docker", "git", "powershell", "ccna"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Education",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Education",
    "Topic :: System :: Systems Administration",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.10"
dependencies = [
    "rich>=12.0.0",
    "questionary>=1.10.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "build>=1.0.0",
    "twine>=5.0.0",
]


[project.urls]
Homepage = "https://github.com/Elshayib/conf-t"
Repository = "https://github.com/Elshayib/conf-t"
"Bug Tracker" = "https://github.com/Elshayib/conf-t/issues"
Documentation = "https://github.com/Elshayib/conf-t#readme"

[project.scripts]
conf-t = "conf_t.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["conf_t*"]

[tool.setuptools.package-data]
conf_t = ["lessons/*.json"]
